# 5D-Interpolator

./: .gitignore  README.md
Interpolator/: README.md  docker-compose.yml  package-lock.json  requirement.txt  temp.pkl
Interpolator/backend/: Dockerfile  pyproject.toml  temp.pkl
Interpolator/backend/fivedreg/: data.py  main.py  model.py
Interpolator/backend/tests/: test_api_error.py  test_benchmark.py  test_data.py  test_model.py
Interpolator/docs/source/: api.rst  conf.py  index.rst  installation.rst  performance.rst  practical_usage.rst  testing.rst  user_guide.rst
Interpolator/experiment/: perf_profile.py
Interpolator/frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
Interpolator/frontend/src/app/: layout.tsx  page.tsx  styles.css
Interpolator/scripts/: build_docs.sh  run_local.sh
Interpolator/test/: pyvenv.cfg
