

[project]
name = "fivedreg"
authors = [
    { name = "Wenye Song", email = "ws452@cam.ac.uk" }
]
readme = "README.md"


requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
    "numpy >= 2.0,<3.0",
    "torch",
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "pytest",
    "httpx",    
    "python-multipart",
    "matplotlib",
    "sphinx-rtd-theme"   
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]

